fix: Save button hidden behind chat #8 closed

--- a/DagoniteEmpire/Pages/CharacterPages/CharacterUpsert.razor.css
+++ b/DagoniteEmpire/Pages/CharacterPages/CharacterUpsert.razor.css
@@ -13,9 +13,9 @@
     padding:0 6px 0 6px;
 }
 
-.save-btn {
 
-    position: fixed;
+.save-btn {
+    position: absolute;
     top: 80px;
     right: 80px;
     z-index: 1000;
