--- a/DagoniteEmpire/Pages/CharacterPages/EquipmentPage.razor.css
+++ b/DagoniteEmpire/Pages/CharacterPages/EquipmentPage.razor.css
@@ -49,7 +49,7 @@
 }
 
 .save-btn {
-    position: fixed;
+    position: absolute;
     top: 80px;
     right: 80px;
     z-index: 1000;
