--- a/DagoniteEmpire/Pages/CharacterPages/HealthPage.razor.css
+++ b/DagoniteEmpire/Pages/CharacterPages/HealthPage.razor.css
@@ -1,7 +1,7 @@
 ﻿
 
 .save-btn {
-    position: fixed;
+    position: absolute;
     top: 80px;
     right: 80px;
     z-index: 1000;
