--- a/DagoniteEmpire/Pages/CharacterPages/ProfessionPage.razor.css
+++ b/DagoniteEmpire/Pages/CharacterPages/ProfessionPage.razor.css
@@ -2,7 +2,7 @@
 }
 
 .save-btn {
-    position: fixed;
+    position: absolute;
     top: 80px;
     right: 80px;
     z-index: 1000;
